--- a/ProyectoGAK/.env
+++ b/ProyectoGAK/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=venecia_modas
 APP_ENV=local
 APP_KEY=base64:hbfsoyuWSfscXsi30FXPGtYXsBeQKBZqjj1h1NRwhI4=
 APP_DEBUG=true
@@ -11,9 +11,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE="venecia_modas"
+DB_USERNAME="root"
+DB_PASSWORD="T ita03031983"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
